wxc/include/ewxw/wxc_glue.h


void       wxWindow_Freeze( TSelf(wxWindow) _obj );

void       wxWindow_GetAdjustedBestSize( TSelf(wxWindow) _obj, TSizeOutVoid(_w,_h) );

void       wxWindow_GetClientSizeConstraint( TSelf(wxWindow) _obj, TSizeOut(_w,_h) );

void*      wxWindow_GetHandle( TSelf(wxWindow) _obj );

void       wxWindow_GetPositionConstraint( TSelf(wxWindow) _obj, TPointOut(_x,_y) );

void       wxWindow_GetSizeConstraint( TSelf(wxWindow) _obj, TSizeOut(_w,_h) );

TClass(wxSizer) wxWindow_GetSizer( TSelf(wxWindow) _obj );

void       wxWindow_MoveConstraint( TSelf(wxWindow) _obj, TPoint(x,y) );

int        wxWindow_Reparent( TSelf(wxWindow) _obj, TClass(wxWindow) _par );

void       wxWindow_SetClientObject( TSelf(wxWindow) _obj, TClass(wxClientData) data );

void       wxWindow_SetScrollbar( TSelf(wxWindow) _obj, int orient, int pos, int thumbVisible, int range, TBool refresh );

void       wxWindow_SetSizer( TSelf(wxWindow) _obj, TClass(wxSizer) sizer );

void       wxWindow_Thaw( TSelf(wxWindow) _obj );