src/cffi/classes/wxWindow.lisp


(cffi:defcfun ("wxWindow_MoveConstraint" wxWindow_MoveConstraint) :void
  (_obj :pointer)
  (x :int)
  (y :int))

(cffi:defcfun ("wxWindow_GetSizeConstraint" wxWindow_GetSizeConstraint) :void
  (_obj :pointer)
  (w :pointer)
  (h :pointer))

(cffi:defcfun ("wxWindow_GetClientSizeConstraint" wxWindow_GetClientSizeConstraint) :void
  (_obj :pointer)
  (w :pointer)
  (h :pointer))

(cffi:defcfun ("wxWindow_GetPositionConstraint" wxWindow_GetPositionConstraint) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(cffi:defcfun ("wxWindow_SetSizer" wxWindow_SetSizer) :void
  (_obj :pointer)
  (sizer :pointer))

(cffi:defcfun ("wxWindow_GetSizer" wxWindow_GetSizer) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxWindow_GetHandle" wxWindow_GetHandle) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxWindow_SetScrollbar" wxWindow_SetScrollbar) :void
  (_obj :pointer)
  (orient :int)
  (pos :int)
  (thumbVisible :int)
  (range :int)
  (refresh :int))

(cffi:defcfun ("wxWindow_Reparent" wxWindow_Reparent) :int
  (_obj :pointer)
  (_par :pointer))

(cffi:defcfun ("wxWindow_GetAdjustedBestSize" wxWindow_GetAdjustedBestSize) :void
  (_obj :pointer)
  (_w :pointer)
  (_h :pointer))

(cffi:defcfun ("wxWindow_Freeze" wxWindow_Freeze) :void
  (_obj :pointer))

(cffi:defcfun ("wxWindow_Thaw" wxWindow_Thaw) :void
  (_obj :pointer))

(cffi:defcfun ("wxWindow_ConvertPixelsToDialogEx" wxWindow_ConvertPixelsToDialogEx) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (_x :pointer)
  (_y :pointer))

(cffi:defcfun ("wxWindow_ConvertDialogToPixelsEx" wxWindow_ConvertDialogToPixelsEx) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (_x :pointer)
  (_y :pointer))

(cffi:defcfun ("wxWindow_SetClientObject" wxWindow_SetClientObject) :void
  (_obj :pointer)
  (obj :pointer))

(cffi:defcfun ("wxWindow_SetVirtualSize" wxWindow_SetVirtualSize) :void
  (_obj :pointer)
  (w :int)
  (h :int))

(cffi:defcfun ("wxWindow_GetVirtualSize" wxWindow_GetVirtualSize) :void
  (_obj :pointer)
  (w :pointer)
  (h :pointer))

(cffi:defcfun ("wxWindow_FitInside" wxWindow_FitInside) :void
  (_obj :pointer))

(cffi:defcfun ("wxWindow_ClientToScreen" wxWindow_ClientToScreen) :void
  (self :pointer)
  (x :int)
  (y :int)
  (sx :pointer)
  (sy :pointer))

(cffi:defcfun ("wxWindow_ScreenToClient2" wxWindow_ScreenToClient2) :void
  (self :pointer)
  (x :int)
  (y :int)
  (cx :pointer)
  (cy :pointer))


